# hosting-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json  openapi.yaml
src/: error.rs  http_witness.rs  lib.rs  main.rs  witness.rs
tests/: test.rs
