[package]
name = "keri-witness-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri = { git = "ssh://git@github.com/THCLab/keriox.git", features = ["query"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
ed25519-dalek = "1.0.1"
rand = { version = "0.7.3", features = ["std", "getrandom"] }
hex = "0.4.3"
http = "0.2.5"
thiserror = "1.0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
structopt = "0.3.25"
ureq = { version = "2.4.0", features = ["json"] }

[dev-dependencies]
reqwest = "0.11.6"
tempfile = "3.2.0"
